# csg1-centraldeoportunidades-python

./: Dockerfile  README.md  api_definition.yaml  app.py  handlers.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml  pipeline.yml
app/: config.py  main.py
app/api/: __init__.py
app/api/curso/: model.py  repository.py
app/api/vaga/: __init__.py  model.py  repository.py  routers.py  services.py
app/errors/: exceptions.py
app/errors/client/: client_errors.py
app/errors/server/: server_errors.py
app/extensions/: __init__.py  database.py  key.json
app/tests/: test_vagas.py
app/tests/mockers/: cursos_mocker.py  vaga_mocker.py
database/: adapter.py
infra/: alb.tf  aws.env  ec2.tf  sc.tf  terraform.tfstate  terraform.tfstate.backup  vpc.tf
infra/.terraform/modules/: modules.json
