[tool.poetry]
name = "csg1-centraldeoportunidades-python"
version = "0.1.0"
description = "Servico central de oportunidades"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
firebase-admin = "^6.2.0"
requests = "^2.31.0"
pydantic = "^2.4.2"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
pymongo = "^4.5.0"
mongomock = "^4.1.2"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
